fix issue with overflow on homepage

--- a/jboard.less
+++ b/jboard.less
@@ -56,6 +56,11 @@ label {
   padding: 0 10px 0;
 }
 
+.row.marketing {
+  margin-left: 0;
+  margin-right: 0;
+}
+
 .jumbotron {
   background: url('/noOfficeHero.jpg');
   background-size: 100% 100%;
